force-app/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <description>Contains all questions related to surveys</description>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Survey Question number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>