force-app/main/default/objects/Survey_Question__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the question active?</description>
    <inlineHelpText>check this box if the question is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>