force-app/main/default/objects/Survey_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Question</description>
    <inlineHelpText>Your Question</inlineHelpText>
    <label>Question</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>